tests/integration/seed/predictions/invalid/classification2.jsonlines
{"annotations": { "FOO": {"labels": [{"value": "pos"}]}}, "uuid": "1831440"}
